tests/baselines/reference/qualifiedModuleLocals.errors.txt
tests/cases/compiler/qualifiedModuleLocals.ts(5,27): error TS2339: Property 'b' does not exist on type 'typeof A'.


==== tests/cases/compiler/qualifiedModuleLocals.ts (1 errors) ====
    module A {
    
      function b() {}
    
      export function a(){  A.b();  } // A.b should be an unresolved symbol error
                              ~
!!! error TS2339: Property 'b' does not exist on type 'typeof A'.
    
    }
    
    A.a();
    